Bug 370016: with (non_xml_object) function::name now works. r=brendan